lang/derive/tests/ui/fail/02-enum.stderr
error: enums are not supported
 --> $DIR/02-enum.rs:5:1
  |
5 | / enum MyStruct {
6 | |     U32(u32),
7 | |     S(String),
8 | | }
  | |_^
